# steelworks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
data/sample/: Ops_Production_Log.xlsx  Ops_Shipping_Log.xlsx  QE_Inspector_A_DailyLog.xlsx  QE_Inspector_B_WeeklyLog.xlsx
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
src/steelworks_defect/: __init__.py  analysis.py  app.py  ingestion.py  models.py  presentation.py  use_cases.py
tests/e2e/: test_recurring_defect_flow_e2e.py
tests/unit/: test_defect_drilldown_view.py  test_recurring_defect_analyzer.py  test_recurring_defect_list_view.py
