[project]
name = "markdown-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "afw825",email = "austinwarmelink@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.2,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
