[project]
name = "markdown-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "afw825",email = "austinwarmelink@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.2,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "sentry-sdk (>=2.54.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pip-licenses (>=5.5.1,<6.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)"
]

[tool.pytest.ini_options]
markers = [
    "e2e: browser end-to-end tests run with Playwright"
]
